tests/integration/nodejs/omit-stacktrace/syntax-error/index.js
// Copyright 2016-2021, KhulnaSoft Ltd.  All rights reserved.

// This program should fail with a SyntaxError
var var
